2010-11-03  Darin Adler  <darin@apple.com>

        Updated Xcode projects by opening them with Xcode 3.2.4.
        Updated svn:ignore for Xcode projects.

        * MiniBrowser/MiniBrowser.xcodeproj: Added property svn:ignore.
        * TestWebKitAPI/TestWebKitAPI.xcodeproj: Added property svn:ignore.
        * WebKitLauncher/WebKitLauncher.xcodeproj: Modified property svn:ignore.
        * WebKitLauncher/WebKitLauncher.xcodeproj/project.pbxproj: Updated with Xcode 3.2.4.

2010-11-03  Adam Roben  <aroben@apple.com>

        Stop waiting for messages from the web process after a timeout elapses

        TestController::runUntil now takes a timeout parameter that specifies
        how long to wait for the condition to become true. WebKitTestRunner
        takes a --timeout flag that specifies how long the timeout should be.
        run-webkit-tests passes this flag to WebKitTestRunner so its timeout
        will be similar to run-webkit-tests.

        Fixes <http://webkit.org/b/43047> <rdar://problem/8365833>
        WebKitTestRunner waits forever if the web process crashes

        Reviewed by Darin Adler and Anders Carlsson.

        * Scripts/old-run-webkit-tests:
        (top level): Moved the GuardMalloc timeout adjustment here from
        readFromDumpToolWithTimer.
        (openDumpTool): Make WTR use a timeout similar to but slightly shorter
        than the one that was specified on the command line.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::TestController): Initialize our timeout values.
        (WTR::TestController::initialize): Parse the --timeout flag and use it
        to modify our timeout values.
        (WTR::TestController::resetStateToConsistentValues): Changed to use a
        short timeout while waiting for the web process to reset and to return
        a boolean indicating whether we were able to reset the web process.
        Uses a 5-second timeout while waiting for the process to be reset.